--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,12 @@
 
 # Log file
 *.log
+logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
 
 # BlueJ files
 *.ctxt
@@ -65,7 +71,20 @@ buildNumber.properties
 # https://github.com/takari/maven-wrapper#usage-without-binary-jar
 .mvn/wrapper/maven-wrapper.jar
 
-### VS Code ###
+# Editor directories and files
 .vscode/
+.vscode/*
+!.vscode/extensions.json
+.DS_Store
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
 
 .env
+
+node_modules
+dist
+dist-ssr
+*.local
