--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -2,6 +2,7 @@ server.address=0.0.0.0
 server.port=8080
 sweets.app.jwtSecret=${JWT_SECRET}
 sweets.app.jwtExpirationMs=${JWT_EXPIRATION_MS}
+sweets.app.crossOriginAddress=${CROSS_ORIGIN_ADDRESS}
 spring.application.name=leaderboard-compvis
 spring.sql.init.mode=always
 spring.docker.compose.file=./backend/compose.yaml
