Add local S3 obj store and rest controller methods

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -3,8 +3,14 @@ server.port=8080
 sweets.app.jwtSecret=${JWT_SECRET}
 sweets.app.jwtExpirationMs=${JWT_EXPIRATION_MS}
 sweets.app.crossOriginAddress=${CROSS_ORIGIN_ADDRESS}
+aws.s3.endpoint=${AWS_S3_ENDPOINT}
+aws.s3.region=${AWS_S3_REGION}
+aws.s3.access-key=${AWS_S3_ACCESS_KEY}
+aws.s3.secret-key=${AWS_S3_SECRET_KEY}
+aws.s3.attachments-bucket-name=${AWS_S3_ATTACHMENTS_BUCKET_NAME}
+aws.s3.submissions-bucket-name=${AWS_S3_SUBMISSIONS_BUCKET_NAME}
 spring.application.name=leaderboard-compvis
-spring.sql.init.mode=always
+spring.sql.init.mode=never
 spring.docker.compose.file=./backend/compose.yaml
 spring.datasource.url=${POSTGRESQL_URL:jdbc:postgresql://localhost:5432/leaderboard-compvis-db}
 spring.datasource.username=${DATASOURCE_USER}
