--- a/backend/compose.yaml
+++ b/backend/compose.yaml
@@ -1,20 +1,111 @@
-version: '3.8'
-
 services:
   postgres:
     image: 'postgres:17'
     environment:
       POSTGRES_DB: leaderboard-compvis-db
-      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
       POSTGRES_USER: ${POSTGRES_USER}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
     ports:
-      - '5432:5432'
+      - "5432:5432"
+    healthcheck:
+      test: [ "CMD-SHELL", "pg_isready -U ${POSTGRES_USER} -d leaderboard-compvis-db" ]
+      interval: 5s
+      timeout: 5s
+      retries: 5
     volumes:
       - db-data:/var/lib/postgresql/data
+      - ./scripts/postgres:/docker-entrypoint-initdb.d
+    networks:
+      - springpostgresql
+
+  # Seaweed master
+  master:
+    container_name: master
+    image: chrislusf/seaweedfs
+    ports:
+      - "9333:9333"
+      - "19333:19333"
+    command: "master -resumeState=false -ip=master -ip.bind=0.0.0.0 -port=9333 -mdir=/var/lib/seaweedfs/master"
+    volumes:
+      - seaweedfs-master-data:/var/lib/seaweedfs/master
+    networks:
+      - springpostgresql
+    restart: unless-stopped
+
+  # Seaweed volume 1
+  seaweed-volume:
+    image: chrislusf/seaweedfs
+    ports:
+      - "8081:8081"
+      - "18081:18081"
+    command: 'volume -mserver="master:9333" -ip.bind=0.0.0.0 -port=8081 -preStopSeconds=1 -dir=/var/lib/seaweedfs/volume1'
+    volumes:
+      - seaweedfs-volume-data:/var/lib/seaweedfs/volume1
+    networks:
+      - springpostgresql
+    depends_on:
+      - master
+    restart: unless-stopped
+
+  # Filer
+  filer:
+    image: chrislusf/seaweedfs
+    depends_on:
+      - master
+      - seaweed-volume
+    ports:
+      - "8888:8888"
+      - "18888:18888"
+    command: 'filer -master="master:9333"'
+    volumes:
+      - seaweedfs-filer-data:/data
+    networks:
+      - springpostgresql
+    restart: unless-stopped
+
+  # S3 API
+  s3:
+    image: chrislusf/seaweedfs
+    ports:
+      - "8333:8333"
+    command: 's3 -filer=filer:8888 -ip.bind=0.0.0.0'
+    environment:
+      AWS_ACCESS_KEY_ID: ${AWS_S3_ACCESS_KEY}
+      AWS_SECRET_ACCESS_KEY: ${AWS_S3_SECRET_KEY}
+    networks:
+      - springpostgresql
+    depends_on:
+      - master
+      - seaweed-volume
+      - filer
+
+    restart: unless-stopped
+
+  # Script to initialize buckets in S3 store
+  s3-init:
+    image: amazon/aws-cli
+    depends_on:
+      - s3
+    volumes:
+      - ./scripts/seaweed-init.sh:/usr/local/bin/seaweed-init.sh
+    environment:
+      S3_ENDPOINT_URL: 'http://s3:8333'
+      ATTACHMENTS_BUCKET_NAME: ${AWS_S3_ATTACHMENTS_BUCKET_NAME}
+      SUBMISSIONS_BUCKET_NAME: ${AWS_S3_SUBMISSIONS_BUCKET_NAME}
+      AWS_ACCESS_KEY_ID: ${AWS_S3_ACCESS_KEY}
+      AWS_SECRET_ACCESS_KEY: ${AWS_S3_SECRET_KEY}
+    networks:
+      - springpostgresql
+    entrypoint: [ "/usr/local/bin/seaweed-init.sh" ]
+    restart: "no"
 
 networks:
   springpostgresql:
     name: springpostgresql
+    driver: bridge
 
 volumes:
   db-data:
+  seaweedfs-master-data:
+  seaweedfs-filer-data:
+  seaweedfs-volume-data:
